# ros2_intro

./: Dockerfile  README.md
docker_image/: Dockerfile  docker-compose.yml  ros2_entrypoint.sh  server.sh  turtle.sh
hagen_robot/hagen_robot_diff_drive/: setup.py
hagen_robot/hagen_robot_diff_drive/hagen_robot_diff_drive/: diff_drive_control.py
hagen_robot/hagen_robot_diff_drive/launch/: start_robot.launch.py
hello_world/src/: friend_service_server.cpp
homework/homework1/src/: commander_node.cpp
homework/homework2/buggy/: CMakeLists.txt
homework/homework2/buggy/src/: pub.cpp  sub.cpp
homework/homework2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
homework/homework2/install/buggy/lib/buggy/: pub  sub
homework/homework2/install/buggy/share/buggy/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
homework/homework2/install/buggy/share/buggy/cmake/: ament_cmake_export_libraries-extras.cmake  buggyConfig.cmake  buggy__rosidl_typesupport_cExport.cmake  buggy__rosidl_typesupport_cppExport-noconfig.cmake  buggy__rosidl_typesupport_introspection_cExport.cmake  buggy__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_buggy__rosidl_generator_cExport-noconfig.cmake  export_buggy__rosidl_typesupport_fastrtps_cExport.cmake  export_buggy__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake
homework/homework2/install/buggy/share/buggy/launch/: test.launch.py
homework/homework2/install/buggy/share/buggy/msg/: CustomMsg.idl  CustomMsg.msg
homework/homework2/install/buggy/share/buggy/srv/: CustomSrv.idl
homework/homework2/log/: latest_build
hw3/: README.md  package.xml  setup.py
hw3/hw3/: spawn.py
hw3/launch/: start_robot.launch.py
hw3/models/arm_model/: arm_model.sdf  model.config
hw3/worlds/: arm_world.world
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/friend_msgs/include/friend_msgs/friend_msgs/msg/: friend_info.h  r2_d2.h  rosidl_typesupport_introspection_c__visibility_control.h
install/friend_msgs/include/friend_msgs/friend_msgs/srv/: friend_info_service.hpp  set_speed.hpp
install/friend_msgs/share/ament_index/resource_index/package_run_dependencies/: friend_msgs
install/friend_msgs/share/ament_index/resource_index/rosidl_interfaces/: friend_msgs
install/friend_msgs/share/friend_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/friend_msgs/share/friend_msgs/cmake/: ament_cmake_export_targets-extras.cmake  export_friend_msgs__rosidl_generator_cExport.cmake  export_friend_msgs__rosidl_generator_cppExport.cmake  export_friend_msgs__rosidl_generator_pyExport-noconfig.cmake  export_friend_msgs__rosidl_generator_pyExport.cmake  export_friend_msgs__rosidl_typesupport_fastrtps_cExport.cmake  friend_msgs__rosidl_typesupport_cExport-noconfig.cmake  friend_msgs__rosidl_typesupport_introspection_cExport.cmake  friend_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/friend_msgs/share/friend_msgs/srv/: FriendInfoService.idl  FriendInfoService_Response.msg  SetSpeed.idl  SetSpeed_Request.msg
install/hagen_robot_controller/lib/hagen_robot_controller/: robot_controller  robot_estimator
install/hagen_robot_controller/share/hagen_robot_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hagen_robot_diff_drive/lib/hagen_robot_diff_drive/: spawn_robot
install/hagen_robot_diff_drive/share/hagen_robot_diff_drive/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hello_world/lib/hello_world/: param_reader_user_info  publisher_node  service_server  subscriber_node
install/hello_world/share/hello_world/: package.sh
install/homework1/lib/homework1/: commander_node
install/homework1/share/homework1/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/homework1/share/homework1/cmake/: homework1Config.cmake
install/ros2_composition/lib/ros2_composition/: manual_composition
install/ros2_composition/share/ros2_composition/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_debug_logging/lib/ros2_debug_logging/: logging_basic
install/ros2_debug_logging/share/ros2_debug_logging/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_visualize/lib/ros2_visualize/: joy_hagen_basic_control  joy_hagen_camera  joy_hagen_marker_array  joy_hagen_point_cloud  joy_hagen_pub
install/ros2_visualize/share/ros2_visualize/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_visualize/share/ros2_visualize/cmake/: ament_cmake_export_include_directories-extras.cmake  ros2_visualizeConfig.cmake
log/: latest_build  latest_graph  latest_list
radio/src/: robot_news_station.cpp
(+57 files in other folders)
