<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buggy</name>
  <version>0.0.0</version>
  <description>The buggy package</description>
  <maintainer email="hany606@gmail.com">op</maintainer>
  <license>TODO: License declaration</license>


  <!-- <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group> -->


  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <build_depend>rclcpp</build_depend> -->
  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <test_depend>ament_lint_auto</test_depend>

  <!-- <exec_depend>rclcpp</exec_depend> -->
  <!-- <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend> -->
  
  <!-- <depend>std_msgs</depend>
  <depend>std_srvs</depend> -->
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

